RESOLVED FIXED165015
Fix exception scope verification failures in IteratorOperations.h.
https://bugs.webkit.org/show_bug.cgi?id=165015
Summary Fix exception scope verification failures in IteratorOperations.h.
Mark Lam
Reported 2016-11-21 18:41:33 PST
Patch coming.
Attachments
proposed patch. (1.51 KB, patch)
2016-11-21 18:43 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2016-11-21 18:43:38 PST
Created attachment 295318 [details] proposed patch.
Mark Lam
Comment 2 2016-11-28 15:54:28 PST
Thanks for the review. Landed in r209037: <http://trac.webkit.org/r209037>.
Note You need to log in before you can comment on or make changes to this bug.