Fix exception scope verification failures in IteratorOperations.h. https://bugs.webkit.org/show_bug.cgi?id=165015

Reviewed by Saam Barati.

* runtime/IteratorOperations.h:
(JSC::forEachInIterable):



Canonical link: https://commits.webkit.org/182739@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209037 268f45cc-cd09-0410-ab3c-d52691b4dbfc